mostly dealt with redundant issues found using intellij inspection